<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Refine"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/topbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:background="@color/topbar"
            android:src="@drawable/back_button"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/refine"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        />

    <TextView
        android:id="@+id/avaibility"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/avaibility"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />


    <Spinner
        android:id="@+id/dropdown_menu"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/dropdown_menu_bg"
        android:spinnerMode="dropdown"
        android:paddingHorizontal="20dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/avaibility"/>

    <TextView
        android:id="@+id/Status"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/status"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_menu" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/status_box"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/dropdown_menu_bg"
        android:textColorHint="@color/text"
        app:boxBackgroundMode="outline"
        android:hint="@string/status_box"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:gravity="top"
        app:hintTextColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/Status"/>


    <TextView
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/distance"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/status_box" />


    <TextView
        android:id="@+id/tv_seekbar_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_50"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"
        android:background="@drawable/slider_tooltip"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="@id/seekBar"
        app:layout_constraintTop_toBottomOf="@id/distance" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progressTint="@color/text"
        android:thumbTint="@color/text"
        android:progress="50"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_seekbar_value" />

    <TextView
        android:id="@+id/tv_min_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_distance"
        android:paddingHorizontal="15dp"
        app:layout_constraintStart_toStartOf="@id/seekBar"
        app:layout_constraintTop_toBottomOf="@id/seekBar" />

    <TextView
        android:id="@+id/tv_max_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_distance"
        app:layout_constraintEnd_toEndOf="@id/seekBar"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/seekBar" />


    <TextView
        android:id="@+id/purpose"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/purpose"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_max_distance" />

    <LinearLayout
        android:id="@id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/purpose">

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/purpose">


            <TextView
                android:id="@+id/btn_coffee"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:background="@drawable/outline_button"
                android:gravity="center"
                android:text="@string/coffee"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/btn_business"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:background="@drawable/outline_button"
                android:gravity="center"
                android:text="@string/business"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/btn_hobbies"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:background="@drawable/outline_button"
                android:gravity="center"
                android:text="@string/hobbies"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/btn_friendship"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:background="@drawable/outline_button"
                android:gravity="center"
                android:text="@string/friendship"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="11sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/purpose">

            <TextView
                android:id="@+id/btn_movies"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:background="@drawable/outline_button"
                android:gravity="center"
                android:text="@string/movies"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/btn_dinning"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:background="@drawable/outline_button"
                android:gravity="center"
                android:text="@string/dinning"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/btn_dating"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:background="@drawable/outline_button"
                android:gravity="center"
                android:text="@string/dating"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/btn_matrimony"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:background="@drawable/outline_button"
                android:gravity="center"
                android:text="@string/matrimony"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="11sp" />


        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_and_explore"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        android:text="Save &amp; Explore"
        android:textColor="@color/white"
        android:backgroundTint="@color/text" />


</androidx.constraintlayout.widget.ConstraintLayout>