<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_groups"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/medium_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@color/tab_unselected_text_color">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_groups" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_businesses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tab_layout_groups"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="20dp"
        android:paddingHorizontal="35dp">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/search_bar_bg"
            android:drawableStart="@drawable/search_icon_resized"
            android:drawablePadding="8dp"
            android:tint="@color/text"
            android:hint="@string/search_bar_text"
            android:textColorHint="@color/text"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/chat_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/chat_text"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout_groups"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
