<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/medium_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@color/tab_unselected_text_color">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_businesses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/businesses_tab" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="310dp"
            android:layout_height="30dp"
            android:background="@drawable/search_bar_bg"
            android:drawableStart="@drawable/search_icon_resized"
            android:drawablePadding="8dp"
            android:tint="@color/text"
            android:hint="@string/search_bar_text"
            android:textColorHint="@color/text"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filter_icon"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/filter_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/filter"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar_layout"
        android:gravity="top|start"
        android:text="@string/invite_friends"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingHorizontal="20dp"
        android:textAlignment="textStart"/>


</androidx.constraintlayout.widget.ConstraintLayout>
