<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/medium_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@color/tab_unselected_text_color">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_invitations" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_invitations" />

    </com.google.android.material.tabs.TabLayout>


    <ImageView
        android:id="@+id/noConnections"
        android:src="@drawable/empty_connections"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noConnections" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/refine_call2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/myTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/increase_radius"
        android:textColor="@color/white"
        android:backgroundTint="@color/text"/>

</androidx.constraintlayout.widget.ConstraintLayout>
